# cosmic-applet-proxmoxbar

./: Cargo.toml  README.md  flake.nix
data/: com.deepwatrcreatur.CosmicAppletProxmoxbar.desktop
src/: app.rs  lib.rs  main.rs
